# Pact

./: .dockerignore  .env.example  .gitignore  AGENT.md  CHANGELOG.md  CLOUD-BOUNDARY.md  CONTRIBUTING.md  Design.md  Dockerfile  GIT-COLLAB.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  USAGE.md  docker-compose.yml  electron-builder.full-local.json  index.html  mcp_diff.patch  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: RELEASE_TEMPLATE.md
client-cli/: Cargo.toml
client-cli/legacy/dev-only/src/: backend_core.rs  connectors.rs  upload_queue.rs
client-cli/legacy/dev-only/tests/: client_backend_integration.rs  client_cli_functional.rs
client-cli/protocols/: README.md
client-cli/protocols/agent/: README.md
client-cli/protocols/checkpoint/: README.md
client-cli/protocols/knowledge/: README.md
client-cli/protocols/server/: README.md
client-cli/protocols/upload/: README.md
client-cli/src/: agent_client.rs  backend_core.rs  checkpoints.rs  client_state.rs  connectors.rs  forwarding.rs  lib.rs  mcp_plugins.rs  paths.rs  skill_hub.rs  targets.rs  upload_queue.rs
client-cli/tests/: client_backend_integration.rs  client_cli_functional.rs
client-gui/: Design.md  README.md  analysis_options.yaml  packaging.modules.json  pubspec.yaml
docs/: 2-3-5-Security-Model.md  AGENT-CAPABILITY-AUDIT.md  ARCHITECTURE-PATTERNS.md  Architecture.md  CHECKPOINT-ALGORITHM-EVOLUTION-PLAN.md  CLIENT-DESIGN-CONFORMANCE.md  CLIENT-IMPLEMENTATION-PLAN.md  CLIENT_ARCHITECTURE.md  COMMERCIALIZATION-IMPROVEMENT-PLAN.zh-CN.md  DESIGN.md  DEVELOPER-GUIDELINES.md  ENTITY-CONFIG-LAYOUT.md  FEATURE-PROFILES.md  GIT-COLLAB.md  IMPLEMENTATION-DECISION-REGISTER.md  KNOWLEDGE-ARCHITECTURE-GOVERNANCE.md  KNOWLEDGE-DISTILLATION-AUDIT.md  KNOWLEDGE-DISTILLATION-EVOLUTION-PLAN.md  KNOWLEDGE-DISTILLATION-IMPLEMENTATION-BASELINE.md  KNOWLEDGE-DISTILLATION.md  KNOWLEDGE-GOVERNANCE.md  KNOWLEDGE-METABOLISM.md  KNOWLEDGE-TAXONOMY-CONFIG.md  MCP_INSTALL.md  MCP_INSTALL.zh-CN.md  PRODUCTION-CAPABILITY-GAP.md  PROTOCOLS.md  README.md  RESOURCE-OPERATION-INTERFACE-DRAFT.md  SERVER.md  SUBSYSTEM-REFACTOR-CHECKLIST.md  TEST-FRAMEWORK.md  USAGE.md  V0.0.1-IMPLEMENTATION-PLAN.md  WORKSPACE-ASSET-GOVERNANCE.md
electron/: agent.mjs  browser-launcher.mjs  config.mjs  main.mjs  (+7 more)
portable-client/: Cargo.toml  README.md
portable-client/src/: main.rs
portable-client/ui/: app-window.slint
(+1107 files in other folders)
