[package]
name = "splitall-client-native"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
directories = "6.0"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
fs2 = "0.4"
notify = "6.1"
interprocess = "2.4"
icu_segmenter = { version = "2", features = ["compiled_data", "lstm"] }
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
libc = "0.2"
time = { version = "0.3", features = ["formatting"] }
ureq = { version = "2.10", features = ["json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

[[bin]]
name = "splitall-clientd"
path = "src/bin/splitall-clientd.rs"

[[bin]]
name = "splitall-client"
path = "src/bin/splitall-client.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
