[package]
name = "portable-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
directories = "6.0"
mime_guess = "2.0"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.14"
i-slint-backend-winit = "=1.16.0"
ureq = { version = "2.10", features = ["json"] }
walkdir = "2.5"

[build-dependencies]
slint-build = "1.14"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
